--- a/yasir/algoritmaDanPemrograman/semester1/pertemuan2/CMakeLists.txt
+++ b/yasir/algoritmaDanPemrograman/semester1/pertemuan2/CMakeLists.txt
@@ -4,5 +4,5 @@ project(pertemuan2 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(pertemuan2
-        point.c
-        garis.c)
+        garis.c
+        bonus.c)
