--- a/yasir/algoritmaDanPemrograman/semester1/pertemuan4/CMakeLists.txt
+++ b/yasir/algoritmaDanPemrograman/semester1/pertemuan4/CMakeLists.txt
@@ -4,4 +4,6 @@ project(pertemuan4 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(pertemuan4
-        proc_2.c)
+        proc_2.c
+        bilanganTerbilang.c
+)
